# evm_minter

./: .gitignore  .gitmodules  .prettierignore  Cargo.toml  README.md  dfx.json  evm_minter.did  makefile
EVM_CONTRACT/script/: TokenLock.s.sol
EVM_CONTRACT/src/: TokenLock.sol
evm_cansiters/bsc_mainnet/: index_init.did  minter_init.did
evm_cansiters/bsc_testnet/: canister_ids.json  dfx.json  init.did  ledger_init.did  minter_init.did
evm_helper_contract/: README.md  foundry.toml  makefile  package-lock.json
evm_helper_contract/broadcast/Depositbnbtest.s.sol/97/: run-1730036231.json
evm_helper_contract/script/: Deposit.s.sol  Depositbnbtest.s.sol  deposit.s.sol
evm_helper_contract/src/: Deposit.sol  TokenLock.sol  deposit.sol
evm_helper_contract/test/: Deposit.t.sol  TokenLock.t.sol  deposit.t.sol
evm_mainnet_cansiters/bsc_testnet/: canister_ids.json
evm_rpc_client/: Cargo.toml
evm_rpc_client/src/: lib.rs  tests.rs  types.rs
minter/: Cargo.toml
minter/proptest-regressions/rpc_client/: tests.txt
minter/src/: address.rs  deposit.rs  endpoints.rs  erc20.rs  evm_config.rs  ledger_client.rs  lib.rs  lifecycle.rs  logs.rs  lsm_client.rs  main.rs  management.rs  memo.rs  rpc_declrations.rs  state.rs  storage.rs  test_fixtures.rs  tests.rs  tx.rs  withdraw.rs
minter/src/address/: tests.rs
minter/src/cbor/: id.rs  nat.rs  principal.rs  u256.rs
minter/src/checked_amount/: mod.rs
minter/src/deposit_logs/: mod.rs  parser.rs  scraping.rs  test.rs
minter/src/eth_types/: mod.rs  tests.rs
minter/src/guard/: mod.rs  tests.rs
minter/src/lsm_client/: tests.rs
minter/src/memo/: tests.rs
minter/src/numeric/: mod.rs  range.rs  tests.rs
minter/src/rpc_client/: mod.rs  providers.rs  tests.rs
minter/src/state/: audit.rs  event.rs  tests.rs
minter/src/state/transactions/: mod.rs  tests.rs
minter/src/storage/: tests.rs
minter/src/tests/: lsm_types.rs  minter_flow_tets.rs  pocket_ic.rs  pocket_ic_helpers.rs
