[package]
name = "minter"
version = "0.1.0"
edition = "2021"

[dependencies]


candid = "0.10.6"
ic-canister-log = "0.2.0"
ic-cdk = "0.13.2"
ic-crypto-sha3={ git = "https://github.com/dfinity/ic.git"}
phantom_newtype={ git = "https://github.com/dfinity/ic.git"}
evm_rpc_client = { path = "../evm_rpc_client" }

hex = "0.4.3"
ethnum = { version = "1.3.2", features = ["serde"] }
num-bigint="0.4.6"
rlp="0.5.2"
num-traits="0.2.19"
thousands="0.2.0"

serde = "1.0.196"
serde_json = "1.0.113"
serde_bytes = "0.11"



minicbor = { version = "0.19.1",features = ["derive","alloc"] }
minicbor-derive = "0.13.0"



proptest="1.4.0"
assert_matches = "1.5.0"



thiserror ="1.0.62"

