[package]
name = "evm_minter"
version = "0.1.0"
edition = "2021"



[dependencies]

evm_rpc_client = { path = "../evm_rpc_client" }
askama = { version = "0.12.1", features = ["serde-json"] }
candid = "0.10.6"

ic-canister-log = "0.2.0"
ic-cdk = "0.16.0"
ic-cbor = "2.6.0"
ic-cdk-macros = "0.9.0"
ic-cdk-timers = "0.7.0"
ic-stable-structures="0.6.5"
ic-crypto-sha2={ git = "https://github.com/dfinity/ic.git"}
ic-crypto-sha3={ git = "https://github.com/dfinity/ic.git"}
ic-management-canister-types = { git = "https://github.com/dfinity/ic.git" }
ic-crypto-secp256k1 = { git = "https://github.com/dfinity/ic.git" }
ic-utils-ensure = { git = "https://github.com/dfinity/ic.git" }
icrc-ledger-client-cdk = { git = "https://github.com/dfinity/ic.git" }
icrc-ledger-types={ git = "https://github.com/dfinity/ic.git"}
ic-ethereum-types = { git = "https://github.com/dfinity/ic.git"}
evm_rpc_types = "1.2.0"


phantom_newtype={ git = "https://github.com/dfinity/ic.git"}
hex = { version = "0.4.3", features = ["serde"] }
hex-literal="0.4.1"
ethnum = { version = "1.3.2", features = ["serde"] }
num-bigint="0.4.6"
rlp="0.5.2"
num-traits="0.2.19"
thousands="0.2.0"

serde = { version = "1.0.203", features = ["derive"] }
serde_bytes = "0.11.15"
serde_cbor = "0.11.2"
serde_json = { version = "^1.0.107" }
serde_with = "1.14.0"
serde_yaml = "0.9.33"

strum = "0.26.3"
strum_macros = "0.26"


minicbor = { version = "0.19.1",features = ["derive","alloc"] }
minicbor-derive = "0.13.0"

scopeguard = "1.1.0"
futures = "0.3.30"
thiserror = "1.0.62"
bytes = "1.7.1"

time = { version = "0.3.36", features = ["formatting"] }


[dev-dependencies]
proptest="1.4.0"
assert_matches = "1.5.0"
maplit="1"
flate2 = "1.0.34"
tokio = { version = "1.41.0", features = ["full"] }
rand = { version = "0.8.5", features = ["small_rng"] }
[target.'cfg(all(target_arch = "wasm32", target_vendor = "unknown", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["custom"] }
[target.'cfg(not(all(target_arch = "wasm32", target_vendor = "unknown", target_os = "unknown")))'.dependencies]
getrandom = { version = "0.2" }
hex = { version = "0.4.3", features = ["serde"] }
ethers-core="2.0.14"
ic-crypto-test-utils-reproducible-rng={ git = "https://github.com/dfinity/ic.git"}
